[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
songbird = { version = "0.3.2", features = ["yt-dlp"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "signal", "macros"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"

[dependencies.serenity]
version = "0.11.7"
features = ["client", "standard_framework", "voice", "rustls_backend"]
